<resources>
    <string name="app_name">Slope Angle Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="app_description">Calculates the slope angle from above, on or the side of any slope.  When on a slope > 30 degrees always use a rope!</string>

    <string name="above_slope">Above Slope</string>
    <string name="on_slope">On Slope</string>
    <string name="side_of_slope">Side of Slope</string>
    <string name="not_implemented_yet">Not Implemented Yet</string>

    <string name="label_angle">Angle:</string>

    <string name="menu_communicate">Communicate</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="label_calculate">Calculate</string>
    <string name="label_record">Record</string>
    <string name="title_activity_foobar">FoobarActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
