<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_above_slope"
            android:icon="@drawable/ic_menu_above_slope"
            android:title="@string/above_slope"
            android:checked="true"/>
        <item
            android:id="@+id/nav_on_slope"
            android:icon="@drawable/ic_menu_on_slope"
            android:title="@string/on_slope"/>
        <item
            android:id="@+id/nav_side_slope"
            android:icon="@drawable/ic_menu_side_slope"
            android:title="@string/side_of_slope"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools"/>
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
